--- a/frontend/src/app/components/pages/cobros/mensualidad-modal/mensualidad-modal.component.html
+++ b/frontend/src/app/components/pages/cobros/mensualidad-modal/mensualidad-modal.component.html
@@ -81,7 +81,7 @@
               </div>
             </div>
           </ng-container>
-            
+
           <!-- Tipo de registro y switches -->
           <div class="col-md-4 ">
             <label class="form-label">Tipo de registro</label>
@@ -110,7 +110,7 @@
               </div>
             </div>
           </div>
-          
+
           <ng-container *ngIf="tipo === 'mensualidad'">
             <div class="col-md-4 d-flex align-items-center gap-4">
               <div class="form-check">
@@ -169,6 +169,9 @@
               <div class="col-md-4">
                 <label class="form-label">Descuento / Beca</label>
                 <input type="number" step="0.01" class="form-control" formControlName="descuento" />
+                <small class="text-muted" *ngIf="form.get('pago_parcial')?.value && descuentoProrrateado > 0">
+                  Descuento prorrateado: {{ descuentoProrrateado | number:'1.2-2' }} Bs
+                </small>
               </div>
             </ng-container>
             <ng-template #noCuotasPendientes>
@@ -216,7 +219,7 @@
             </ng-template>
           </ng-template>
 
-          
+
           <!-- Pago parcial: mensualidad o reincorporacion -->
           <div class="col-md-8 d-flex align-items-center gap-4" *ngIf="tipo === 'reincorporacion'">
             <div class="form-check">
