--- a/frontend/src/app/components/pages/cobros/descuento-form-modal/descuento-form-modal.component.html
+++ b/frontend/src/app/components/pages/cobros/descuento-form-modal/descuento-form-modal.component.html
@@ -44,7 +44,7 @@
 					</div>
 				</div>
 				<div class="modal-footer">
-					<button type="submit" class="btn btn-primary" [disabled]="!hasEstudiante">Guardar</button>
+					<button type="submit" class="btn btn-primary" [disabled]="!hasEstudiante || hasPendingWithDiscount">Guardar</button>
 					<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
 				</div>
 			</form>
