--- a/frontend/src/app/components/pages/cobros/mensualidad-modal/mensualidad-modal.component.html
+++ b/frontend/src/app/components/pages/cobros/mensualidad-modal/mensualidad-modal.component.html
@@ -39,49 +39,6 @@
         </div>
 
         <form [formGroup]="form" class="row g-3">
-          <!-- Datos de Tarjeta -->
-          <ng-container *ngIf="isTarjeta">
-            <div class="col-12">
-              <div class="border rounded p-3 mb-2">
-                <div class="row g-3 align-items-end">
-                  <div class="col-md-4">
-                    <label class="form-label">Banco Origen</label>
-                    <input class="form-control" formControlName="banco_origen" placeholder="Banco origen" [class.is-invalid]="form.get('banco_origen')?.invalid && (form.get('banco_origen')?.touched || form.get('banco_origen')?.dirty)" />
-                    <div class="invalid-feedback">Ingrese el banco de origen</div>
-                  </div>
-                  <div class="col-md-2">
-                    <label class="form-label">Nº Tarjeta (4 primeros)</label>
-                    <input class="form-control" maxlength="4" formControlName="tarjeta_first4" placeholder="4" [class.is-invalid]="form.get('tarjeta_first4')?.invalid && (form.get('tarjeta_first4')?.touched || form.get('tarjeta_first4')?.dirty)" />
-                    <div class="invalid-feedback">Ingrese 4 dígitos</div>
-                  </div>
-                  <div class="col-md-2">
-                    <label class="form-label">Nº Tarjeta (4 últimos)</label>
-                    <input class="form-control" maxlength="4" formControlName="tarjeta_last4" placeholder="4" [class.is-invalid]="form.get('tarjeta_last4')?.invalid && (form.get('tarjeta_last4')?.touched || form.get('tarjeta_last4')?.dirty)" />
-                    <div class="invalid-feedback">Ingrese 4 dígitos</div>
-                  </div>
-                  <div class="col-md-4">
-                    <label class="form-label">Cuenta destino</label>
-                    <select class="form-select" formControlName="id_cuentas_bancarias" [class.is-invalid]="form.get('id_cuentas_bancarias')?.invalid && (form.get('id_cuentas_bancarias')?.touched || form.get('id_cuentas_bancarias')?.dirty)">
-                      <option value="">Seleccione cuenta/banco</option>
-                      <option *ngFor="let c of cuentasBancarias" [value]="c.id_cuentas_bancarias">{{ c.banco }} - {{ c.numero_cuenta }}</option>
-                    </select>
-                    <div class="invalid-feedback">Seleccione una cuenta destino</div>
-                  </div>
-                  <div class="col-md-4">
-                    <label class="form-label">Fecha depósito</label>
-                    <input type="date" class="form-control" formControlName="fecha_deposito" [class.is-invalid]="form.get('fecha_deposito')?.invalid && (form.get('fecha_deposito')?.touched || form.get('fecha_deposito')?.dirty)" />
-                    <div class="invalid-feedback">Ingrese la fecha del depósito</div>
-                  </div>
-                  <div class="col-md-4">
-                    <label class="form-label">Num. depósito</label>
-                    <input type="text" class="form-control" formControlName="nro_deposito" [class.is-invalid]="form.get('nro_deposito')?.invalid && (form.get('nro_deposito')?.touched || form.get('nro_deposito')?.dirty)" />
-                    <div class="invalid-feedback">Ingrese el número de depósito</div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </ng-container>
-
           <!-- Tipo de registro y switches -->
           <div class="col-md-4 ">
             <label class="form-label">Tipo de registro</label>
@@ -110,7 +67,6 @@
               </div>
             </div>
           </div>
-
           <ng-container *ngIf="tipo === 'mensualidad'">
             <div class="col-md-4 d-flex align-items-center gap-4">
               <div class="form-check">
@@ -119,8 +75,50 @@
               </div>
             </div>
           </ng-container>
+          <!-- Datos de Tarjeta -->
+          <ng-container *ngIf="isTarjeta">
+            <div class="col-12">
+              <div class="border rounded p-3 mb-2">
+                <div class="row g-3 align-items-end">
+                  <div class="col-md-4">
+                    <label class="form-label">Banco Origen</label>
+                    <input class="form-control" formControlName="banco_origen" placeholder="Banco origen" [class.is-invalid]="form.get('banco_origen')?.invalid && (form.get('banco_origen')?.touched || form.get('banco_origen')?.dirty)" />
+                    <div class="invalid-feedback">Ingrese el banco de origen</div>
+                  </div>
+                  <div class="col-md-2">
+                    <label class="form-label">Nº Tarjeta (4 primeros)</label>
+                    <input class="form-control" maxlength="4" formControlName="tarjeta_first4" placeholder="4" [class.is-invalid]="form.get('tarjeta_first4')?.invalid && (form.get('tarjeta_first4')?.touched || form.get('tarjeta_first4')?.dirty)" />
+                    <div class="invalid-feedback">Ingrese 4 dígitos</div>
+                  </div>
+                  <div class="col-md-2">
+                    <label class="form-label">Nº Tarjeta (4 últimos)</label>
+                    <input class="form-control" maxlength="4" formControlName="tarjeta_last4" placeholder="4" [class.is-invalid]="form.get('tarjeta_last4')?.invalid && (form.get('tarjeta_last4')?.touched || form.get('tarjeta_last4')?.dirty)" />
+                    <div class="invalid-feedback">Ingrese 4 dígitos</div>
+                  </div>
+                  <div class="col-md-4">
+                    <label class="form-label">Cuenta destino</label>
+                    <select class="form-select" formControlName="id_cuentas_bancarias" [class.is-invalid]="form.get('id_cuentas_bancarias')?.invalid && (form.get('id_cuentas_bancarias')?.touched || form.get('id_cuentas_bancarias')?.dirty)">
+                      <option value="">Seleccione cuenta/banco</option>
+                      <option *ngFor="let c of cuentasBancariasFiltradas" [value]="c.id_cuentas_bancarias">{{ c.banco }} - {{ c.numero_cuenta }}</option>
+                    </select>
+                    <div class="invalid-feedback">Seleccione una cuenta destino</div>
+                  </div>
+                  <div class="col-md-4">
+                    <label class="form-label">Fecha depósito</label>
+                    <input type="date" class="form-control" formControlName="fecha_deposito" [class.is-invalid]="form.get('fecha_deposito')?.invalid && (form.get('fecha_deposito')?.touched || form.get('fecha_deposito')?.dirty)" />
+                    <div class="invalid-feedback">Ingrese la fecha del depósito</div>
+                  </div>
+                  <div class="col-md-4">
+                    <label class="form-label">Num. depósito</label>
+                    <input type="text" class="form-control" formControlName="nro_deposito" [class.is-invalid]="form.get('nro_deposito')?.invalid && (form.get('nro_deposito')?.touched || form.get('nro_deposito')?.dirty)" />
+                    <div class="invalid-feedback">Ingrese el número de depósito</div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </ng-container>
 
-          <!-- Datos de Cheque / Depósito / Transferencia (excluye QR) -->
+         <!-- Datos de Cheque / Depósito / Transferencia (excluye QR) -->
           <ng-container *ngIf="showBancarioBlock && !isQR">
             <div class="col-12">
               <div class="border rounded p-3 mb-2">
@@ -129,7 +127,7 @@
                     <label class="form-label">Cuenta destino</label>
                     <select class="form-select" formControlName="id_cuentas_bancarias" [class.is-invalid]="form.get('id_cuentas_bancarias')?.invalid && (form.get('id_cuentas_bancarias')?.touched || form.get('id_cuentas_bancarias')?.dirty)">
                       <option value="">Seleccione cuenta/banco</option>
-                      <option *ngFor="let c of cuentasBancarias" [value]="c.id_cuentas_bancarias">{{ c.banco }} - {{ c.numero_cuenta }}</option>
+                      <option *ngFor="let c of cuentasBancariasFiltradas" [value]="c.id_cuentas_bancarias">{{ c.banco }} - {{ c.numero_cuenta }}</option>
                     </select>
                     <div class="invalid-feedback">Seleccione una cuenta destino</div>
                   </div>
