--- a/frontend/src/app/components/pages/sin/configuracion-punto-venta/add-users-modal/add-users-modal.component.scss
+++ b/frontend/src/app/components/pages/sin/configuracion-punto-venta/add-users-modal/add-users-modal.component.scss
@@ -1,3 +1,7 @@
+.bg-orange-dark {
+	background-color: #d97706 !important;
+}
+
 .list-group-item.active {
 	background-color: #e7f3ff;
 	border-color: #0d6efd;
